Arbalest sprite adjustment
+ Rename to Javelin
+ Rename "rocket"s to "cruise missile"s

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -130,18 +130,18 @@ block.prog-mats-missile-sentry.name = Missile Sentry
 block.prog-mats-missile-sentry.description = A missile-launching sentry unit.\nActivate by configuring it or launching it with a [gold]sergeant[] turret.
 
 ### Rocket
-block.prog-mats-arbalest.name = [gold]Arbalest
-block.prog-mats-arbalest.description = Fires extremely fast [gold]rockets[] at enemies.
-block.prog-mats-arbalest.details = Anyone else remember my Ohno Missiles mod from the ancient past known as v5?
+block.prog-mats-arbalest.name = [gold]Javelin
+block.prog-mats-arbalest.description = Launches a powerful [gold]cruise missile[] at enemy targets over long distances.
+block.prog-mats-arbalest.details = Anyone else remember my Ohno Missiles mod from the ancient past known as Mindustry v5?
 #### Rockets
-block.prog-mats-empty-rocket.name = Rocket Shell
-block.prog-mats-empty-rocket.description = An empty rocket shell.
-block.prog-mats-basic-rocket.name = Basic Rocket
-block.prog-mats-basic-rocket.description = An explosive [gold]rocket[]. Explodes on hit, dealing a lot of damage.
-block.prog-mats-incendiary-rocket.name = Incendiary Rocket
-block.prog-mats-incendiary-rocket.description = An explosive [gold]rocket[]. Explodes on hit, dealing a lot of damage and causing fire.
-block.prog-mats-splitter-rocket.name = Splitter Rocket
-block.prog-mats-splitter-rocket.description = An explosive [gold]rocket[]. Explodes on hit, dealing damage and firing off smaller rockets.
+block.prog-mats-empty-rocket.name = Cruise Missile Shell
+block.prog-mats-empty-rocket.description = An empty [gold]cruise missile[] shell.
+block.prog-mats-basic-rocket.name = Basic Cruise Missile
+block.prog-mats-basic-rocket.description = An explosive [gold]cruise missile[]. Explodes on hit, dealing a lot of damage.
+block.prog-mats-incendiary-rocket.name = Incendiary Cruise Missile
+block.prog-mats-incendiary-rocket.description = An explosive [gold]cruise missile[]. Explodes on hit, dealing a lot of damage and causing fire.
+block.prog-mats-splitter-rocket.name = Splitter Cruise Missile
+block.prog-mats-splitter-rocket.description = An explosive [gold]cruise missile[]. Explodes on hit, dealing damage and firing off smaller rockets.
 
 ### Missile
 block.prog-mats-artemis.name = [red]Artemis
@@ -149,14 +149,15 @@ block.prog-mats-artemis.description = Launches long-range [red]ballistic missile
 block.prog-mats-paragon.name = [red]Paragon
 block.prog-mats-paragon.description = Launches long-range nuclear [red]ballistic missiles[] at enemies. Can only target enemies beyond a large minimum distance.
 #### Missiles
-block.prog-mats-empty-missile.name = Missile Shell
+block.prog-mats-empty-missile.name = Ballistic Missile Shell
 block.prog-mats-empty-missile.description = An empty [red]ballistic missile[] shell.
-block.prog-mats-basic-missile.name = Basic Missile
+block.prog-mats-basic-missile.name = Basic Ballistic Missile
 block.prog-mats-basic-missile.description = A [red]ballistic missile[]. Explodes on impact, dealing a lot of splash damage.
-block.prog-mats-recursive-missile.name = Recursive Missile
+block.prog-mats-recursive-missile.name = Recursive Ballistic Missile
 block.prog-mats-recursive-missile.description = A [red]ballistic missile[]. Splits twice in flight, creating multiple impacts that deal splash damage.
-block.prog-mats-bombing-missile.name = Bombing Missile
+block.prog-mats-bombing-missile.name = Bombing Ballistic Missile
 block.prog-mats-bombing-missile.description = A [red]ballistic missile[]. Drops bombs as it flies, raining explosions along its path. Explodes on impact, dealing splash damage.
+
 block.prog-mats-empty-nuke.name = Nuclear Missile Shell
 block.prog-mats-empty-nuke.description = An empty nuclear [red]ballistic missile[] shell.
 block.prog-mats-basic-nuke.name = Basic Nuke
