--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -80,7 +80,7 @@ block.prog-mats-attraction.description = Fires magnets that pull themselves towa
 
 ### Anxiety
 block.prog-mats-sentinel.name = [sky]Sentinel
-block.prog-mats-sentinel.description = Fires powerful explosive laser bolts at ground targets over long distances.
+block.prog-mats-sentinel.description = Fires powerful explosive laser bolts at enemy targets over long distances. Requires cyanogen.
 
 ### Sword
 block.prog-mats-dance.name = [crimson]Dance
