Miner depot bundle + Control hint

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -187,6 +187,8 @@ block.prog-mats-firestorm.details = IT'S BACK!
 
 block.prog-mats-smart-drill.name = Smart Drill
 block.prog-mats-smart-drill.description = A fast drill. What it mines can be selected. Requires power.
+block.prog-mats-unit-miner-depot.name = Unit Miner Depot
+block.prog-mats-unit-miner-depot.description = Constructs mining drones. Drones automatically head out to mine the selected resource and bring them back to the depot. The drones carry some self-defense weapons and heal over time.
 
 ## Distribution
 
@@ -292,6 +294,9 @@ unit.prog-mats-barrage.name = Barrage
 unit.prog-mats-barrage.description = Barrages enemies with homing shots. Does not move. Expires after a short lifetime.
 unit.prog-mats-downpour.name = Strikedown
 unit.prog-mats-downpour.description = Fire smalls homing missiles at enemies. Does not move. Expires after a short lifetime.
+
+unit.prog-mats-draug.name = Draug
+unit.prog-mats-draug.details = ehe
 
 unit.prog-mats-small-flare.name = Small Signal Flare
 unit.prog-mats-small-flare.description = A small signal flare made of silicon. Fired by allures to attract enemy fire.
@@ -441,6 +446,11 @@ setting.pm-sandbox-everything.description = These can take a fair amount of data
 setting.pm-other-settings.name = Other Settings
 setting.pm-farting.name = Funi Mode :)
 setting.pm-farting.description = Restart required to apply changes.
+
+## Hints
+
+hint.pm-minerControl = A miner depot can optionally have its [accent]target ore[] set manually. Click a miner depot block while in command mode, then right-click a location.\nIf the ore at that location matches the depot's selected ore, its mining drone will target it.
+hint.pm-minerControl.mobile = A miner depot can optionally have its [accent]target ore[] set manually. Tap a miner depot block while in command mode, then tap a location.\nIf the ore at that location matches the depot's selected ore, its mining drone will target it.
 
 ## Mod
 
