--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -175,12 +175,22 @@ block.prog-mats-matrix.name = Matrix
 block.prog-mats-matrix.description = A large modular turret platform.
 block.prog-mats-matrix.details = Sprite by BlueWolf (Adjusted by me when this was moved to Erekir.)
 #### Modules (Small)
-block.prog-mats-augment.name = Augment
-block.prog-mats-augment.description = Slowly repairs the platform as well as increases the speed of other modules. Limit of 1 per platform.
+block.prog-mats-coil.name = Coil
+block.prog-mats-coil.description = Fires twisting quartets of bullets at enemy targets.\n[accent]Requires placement onto a modular turret platform to function.
+block.prog-mats-skeet.name = Vigil
+block.prog-mats-skeet.description = Shoots down enemy missiles with high-accuracy shots.\n[accent]Requires placement onto a modular turret platform to function.
+block.prog-mats-burst.name = Scald
+block.prog-mats-burst.description = Releases massive bursts of steam which damage and push back enemy targets.\n[accent]Requires placement onto a modular turret platform to function.
+block.prog-mats-augment.name = Regendrive Module
+block.prog-mats-augment.description = Slowly repairs the platform as well as increases the speed of other modules.\n[accent]Requires placement onto a modular turret platform to function.\nLimit of 1 per platform.
 #### Modules (Medium)
+block.prog-mats-abyss.name = Shadow
+block.prog-mats-abyss.description = Concentrates bursts of energy onto enemy targets. Pierces armor.\n[accent]Requires placement onto a modular turret platform to function.
+block.prog-mats-gravity.name = Influx
+block.prog-mats-gravity.description = Fires a tractor cone which pulls in all air targets caught in it.\n[accent]Requires placement onto a modular turret platform to function.
 #### Modules (Large)
 block.prog-mats-firestorm.name = Firestorm
-block.prog-mats-firestorm.description = Launches barrages short-range [red]ballistic missiles[] at enemy targets. Can only target enemies beyond a small minimum distance.
+block.prog-mats-firestorm.description = Launches barrages short-range [red]ballistic missiles[] at enemy targets. Can only target enemies beyond a small minimum distance.\n[accent]Requires placement onto a modular turret platform to function.
 block.prog-mats-firestorm.details = IT'S BACK!
 
 ## Drills
