--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,10 @@ org.gradle.jvmargs=--illegal-access=permit \
 --add-exports=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
 --add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
 --add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED
+
+mindustryVersion = v144.3
+arcVersion = v144.3
+entVersion = v144.3
+
+kapt.include.compile.classpath = false
+kotlin.stdlib.default.dependency = false
