--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -7,18 +7,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up PATH
       run: |
         echo "${ANDROID_HOME}/build-tools/30.0.1" >> $GITHUB_PATH
-    - name: Set up JDK 16
-      uses: actions/setup-java@v1
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
       with:
-        java-version: 16
+        java-version: 17
+        distribution: temurin
     - name: Build mod jar
       run: ./gradlew deploy
     - name: Upload built jar file
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: ProgMin Pull Request (zipped)
         path: build/libs/${{ github.event.repository.name }}.jar
