--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=--illegal-access=permit \
+org.gradle.jvmargs = \
 --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
 --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
 --add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED \
@@ -12,9 +12,9 @@ org.gradle.jvmargs=--illegal-access=permit \
 --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
 --add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED
 
-mindustryVersion = v144.3
-arcVersion = v144.3
-entVersion = v144.3
+mindustryVersion = v145.1
+arcVersion = v145.1
+entVersion = 1.1.2
 
 kapt.include.compile.classpath = false
 kotlin.stdlib.default.dependency = false
