--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -405,7 +405,7 @@ bullet.pm-target = [lightgray]To target:
 ##Block-specific Info
 
 pm-missing-research = [darkgray]<Research Required>
-pm-sandbox-disabled = This is disabled to save data.\nEnable it in Progression Ministry settings.
+pm-sandbox-disabled = This is disabled to save data.\nEnable it in Meepscillanious Concepts settings.
 pm-infinity = Infinity
 pm-infinite-damage = Infinite damage
 pm-everything = Everything
@@ -442,7 +442,7 @@ pm-target-dummy.enemy = Enemy Team
 
 ## Settings
 
-setting.pm-title = Progression Ministry
+setting.pm-title = Meepscillanious Concepts
 setting.pm-graphics-settings.name = Graphics Settings
 setting.pm-sword-opacity.name = Sword Opacity
 setting.pm-zone-opacity.name = Zone Opacity
@@ -464,18 +464,18 @@ hint.pm-minerControl.mobile = A miner depot can optionally have its [accent]targ
 
 ## Mod
 
-mod.prog-mats.author = [#FCC21B]Creator:\n        MEEP of Faith[]
-mod.prog-mats-contributor.0 = [#FCC21B]ThirstyBoi[] (Eruptor sprite + Masquerade sword)
-mod.prog-mats-contributor.1 = [#FCC21B]Goober[] (Kugelblitz and Popeshadow sprites)
-mod.prog-mats-contributor.2 = [#FCC21B]VozDuh[] (Previous missile turret sprites, new icon)
-mod.prog-mats-contributor.3 = [#FCC21B]Ilya246[] (Luminocity damage ramping)
-mod.prog-mats-contributor.4 = [#FCC21B]Kapzduke[] (Sergeant sprites)
-mod.prog-mats-contributor.5 = [#FCC21B]TheMalaysianDude[] (Missile assembler resprite)
-mod.prog-mats-contributor.6 = [#FCC21B]Memedustry[] (Incision sprite)
-mod.prog-mats-contributor.7 = [#FCC21B]BlueWolf[] (Modular Turret bases and Rebound sprites)
-mod.prog-mats-contributor.8 = [#FCC21B]lordReddx[] (RU Translation)
-mod.prog-mats-contributor.9 = [#FCC21B]xStaBUx[] (Ukrainian translation)
-mod.prog-mats-contributor.10 = [#FCC21B]Prosta4ok_ua[] (Ukrainian translation proofreading)
-mod.prog-mats-contributor.11 = Some sounds from [#FCC21B]Freesound[].
-mod.prog-mats-contributor.12 = Anyone I stole code from.
-mod.prog-mats.description = This mod is mostly just turrets. It's just me having fun with what I can create with the power of Java.
+mod.prog-mats.author = [#4a6de5]Creator:\n        MEEP of Faith[]
+mod.prog-mats-contributor.0 = [#4a6de5]ThirstyBoi[] (Eruptor sprite + Masquerade sword)
+mod.prog-mats-contributor.1 = [#4a6de5]Goober[] (Kugelblitz and Popeshadow sprites)
+mod.prog-mats-contributor.2 = [#4a6de5]VozDuh[] (Previous missile turret sprites, new icon)
+mod.prog-mats-contributor.3 = [#4a6de5]Ilya246[] (Luminocity damage ramping)
+mod.prog-mats-contributor.4 = [#4a6de5]Kapzduke[] (Sergeant sprites)
+mod.prog-mats-contributor.5 = [#4a6de5]TheMalaysianDude[] (Missile assembler resprite)
+mod.prog-mats-contributor.6 = [#4a6de5]Memedustry[] (Incision sprite)
+mod.prog-mats-contributor.7 = [#4a6de5]BlueWolf[] (Modular Turret bases and Rebound sprites)
+mod.prog-mats-contributor.8 = [#4a6de5]lordReddx[] (RU Translation)
+mod.prog-mats-contributor.9 = [#4a6de5]xStaBUx[] (Ukrainian translation)
+mod.prog-mats-contributor.10 = [#4a6de5]Prosta4ok_ua[] (Ukrainian translation proofreading)
+mod.prog-mats-contributor.11 = Some sounds from [#4a6de5]Freesound[].
+mod.prog-mats-contributor.12=Anyone else I sto- *borrowed* code from.
+mod.prog-mats.description = A collection of random ideas that come to my head.
