--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,43 @@
+##### Project configurations.
+# The mod's internal name, corresponds to `name` in `mod.json`.
+modName = prog-mats
+# The mod's fetched entity sources package.
+modFetch = progressed.fetched
+# The mod's input entity sources package.
+modGenSrc = progressed.entities.comp
+# The mod's generated sources package.
+modGen = progressed.gen.entities
+# The mod's JAR file name. Desktop build is suffixed with `Desktop`.
+modArtifact = MeepscCont
+
+# EntityAnno version, for integrating syntax-downgrader and entity annotation processor.
+# The exact version you need should be looked up on the project's `README.md`
+# (see https://github.com/GlennFolker/EntityAnno?tab=readme-ov-file#version-compatibility).
+entVersion = v146.0.1
+# Set to `true` if the mod is compiled against Mindustry bleeding-edge build.
+# See documents on `mindustryVersion` and `mindustryBEVersion`.
+mindustryBE = false
+# Mindustry *release* version, e.g. `v145` or `v146`.
+# Leave empty if `mindustryBE = true`.
+mindustryVersion = v146
+# Mindustry *bleeding-edge* version, corresponds to commit hashes of Anuken/MindustryJitpack, e.g. `345ea0d54de0aee6953a664468556f4fea1a7c4f`.
+# Leave empty if `mindustryBE = false`.
+mindustryBEVersion =
+# Arc version, should either follow `mindustryVersion` for release or whatever hash bleeding-edge Mindustry uses.
+arcVersion = v146
+
+##### Android SDK configuration for building Android artifacts.
+# Android platform SDK version.
+androidSdkVersion = 34
+# Android build-tools version.
+androidBuildVersion = 34.0.0
+# Android platform minimum API version. Should be left as 14, as that's what Mindustry officially supports.
+androidMinVersion = 14
+
+##### Other stuff that should be left as-is.
+# Enable parallel compilation.
+org.gradle.parallel = true
+# Necessary internal API access for EntityAnno.
 org.gradle.jvmargs = \
 --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
 --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
@@ -11,10 +51,3 @@ org.gradle.jvmargs = \
 --add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
 --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
 --add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED
-
-mindustryVersion = v145.1
-arcVersion = v145.1
-entVersion = 1.1.2
-
-kapt.include.compile.classpath = false
-kotlin.stdlib.default.dependency = false
