Simplified render for low-end devices

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -353,6 +353,8 @@ setting.pm-graphics-settings.name = Graphics Settings
 setting.pm-sword-opacity.name = Sword Opacity
 setting.pm-zone-opacity.name = Zone Opacity
 setting.pm-tesla-range.name = Display Tesla Range When Attacking
+setting.pm-advanced-blackhole-rendering.name = Advanced Black Hole Rendering
+setting.pm-advanced-blackhole-rendering.description = Advanced rendering may be laggy on low-end devices.\nDisable if you have framerate issues.
 setting.pm-other-settings.name = Other Settings
 setting.pm-farting.name = Funi Mode :)
 setting.pm-farting.description = Restart required to apply changes.
