--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -378,3 +378,4 @@ mod.prog-mats-contributor.7 = [#4a6de5]Prosta4ok_ua[] (Ukrainian translation pro
 mod.prog-mats-contributor.8 = Some sounds from [#4a6de5]Freesound[].
 mod.prog-mats-contributor.9 =Anyone else I sto- *borrowed* code from.
 mod.prog-mats.description = A collection of random ideas that come to my head.
+mod.prog-mats.subtitle = The machinations of a madman.
