Cleaner mod bundle setting

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -367,15 +367,15 @@ hint.pm-minerControl.mobile = A miner depot can optionally have its [accent]targ
 ## Mod
 
 mod.prog-mats.author = [#4a6de5]Creator:\n        MEEP of Faith[]
-mod.prog-mats-contributor.0 = [#4a6de5]ThirstyBoi[] (Eruptor sprite + Masquerade sword)
-mod.prog-mats-contributor.1 = [#4a6de5]Goober[] (Kugelblitz and Popeshadow sprites)
-mod.prog-mats-contributor.2 = [#4a6de5]Kapzduke[] (Sergeant sprites)
-mod.prog-mats-contributor.3 = [#4a6de5]TheMalaysianDude[] (Missile assembler resprite)
-mod.prog-mats-contributor.4 = [#4a6de5]BlueWolf[] (Modular Turret bases)
-mod.prog-mats-contributor.5 = [#4a6de5]lordReddx[] (RU Translation)
-mod.prog-mats-contributor.6 = [#4a6de5]xStaBUx[] (Ukrainian translation)
-mod.prog-mats-contributor.7 = [#4a6de5]Prosta4ok_ua[] (Ukrainian translation proofreading)
-mod.prog-mats-contributor.8 = Some sounds from [#4a6de5]Freesound[].
-mod.prog-mats-contributor.9 =Anyone else I sto- *borrowed* code from.
+mod.prog-mats.contributor-0 = [#4a6de5]ThirstyBoi[] (Eruptor sprite + Masquerade sword)
+mod.prog-mats.contributor-1 = [#4a6de5]Goober[] (Kugelblitz and Popeshadow sprites)
+mod.prog-mats.contributor-2 = [#4a6de5]Kapzduke[] (Sergeant sprites)
+mod.prog-mats.contributor-3 = [#4a6de5]TheMalaysianDude[] (Missile assembler resprite)
+mod.prog-mats.contributor-4 = [#4a6de5]BlueWolf[] (Modular Turret bases)
+mod.prog-mats.contributor-5 = [#4a6de5]lordReddx[] (RU Translation)
+mod.prog-mats.contributor-6 = [#4a6de5]xStaBUx[] (Ukrainian translation)
+mod.prog-mats.contributor-7 = [#4a6de5]Prosta4ok_ua[] (Ukrainian translation proofreading)
+mod.prog-mats.contributor-8 = Some sounds from [#4a6de5]Freesound[].
+mod.prog-mats.contributor-9 =Anyone else I sto- *borrowed* code from.
 mod.prog-mats.description = A collection of random ideas that come to my head.\n\n[red]REQUIRES `MEEPofFaith/black-hole-renderer` TO RUN. THE GAME WILL CRASH WITHOUT IT INSTALLED.[]
 mod.prog-mats.subtitle = The machinations of a madman.
